--- a/package.json
+++ b/package.json
@@ -3,28 +3,21 @@
   "scripts": {
     "start": "coffee app.coffee"
   },
-  "version": "3.0.0",
+  "version": "4.0.0",
   "author": "Aaditya Bhatia <aadityabhatia@gmail.com>",
   "description": "production-ready node skeleton",
   "dependencies": {
-    "browserify-middleware": "^8.1.1",
-    "coffeeify": "^3.0.1",
-    "coffeescript": "^2.3.2",
-    "colors": "^1.3.3",
     "express": "^4.16.4",
     "gitsha": "^0.1.0",
     "morgan": "^1.9.1",
-    "pug": "^2.0.3",
-    "serve-favicon": "^2.5.0",
-    "socket.io": "^2.2.0",
-    "stylus": "^0.54.5"
+    "socket.io": "^2.2.0"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=12"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:aadityabhatia/node-boilerplate.git"
+    "url": "git@github.com:aadityabhatia/node-api-server-boilerplate.git"
   },
   "license": "Apache-2.0",
   "main": "app.coffee"
